# eda-kafka-rust-go-surrealdb

./: .gitignore  docker-compose.yml
inventory_service/: Cargo.toml
inventory_service/src/: config.rs  main.rs  startup.rs
inventory_service/src/broker/kafka/: connection.rs  mod.rs  stock_event.rs
inventory_service/src/configuration/: base.yaml
inventory_service/src/db/surrealdb/: connection.rs  mod.rs  schema.rs  stock_event.rs
inventory_service/src/route/: product.rs
shipment_service/: go.mod
shipment_service/cmd/: main.go
shipment_service/internal/app/: application.go  handler.go
shipment_service/internal/domain/: consumer.go  converter.go  event.go  stock_event.go
shipment_service/internal/kafka/: consumer.go  converter.go  message.go
shipment_service/internal/model/: stock.go
