[package]
name = "inventory_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb="1.4.2"
actix-web = "4"
dotenv = "0.15.0"
futures-util = "0.3"
rdkafka = { version = "0.36", features = ["ssl-vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
config = { version = "0.14.0", features = ["yaml"] }
log = "0.4.*"
env_logger = "0.7.*"